[tool.poetry]
name = "matfusion"
version = "0.1.0"
description = ""
authors = ["Esteve Soria <esofabian@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jax = { version = "^0.4.8,<=0.4.23", extras = ["cuda11_pip"] }

nvidia-cudnn-cu11 = "*"
nvidia-nccl-cu11 = ">=2.18.3"
nvidia-cuda-cupti-cu11 = "11.7.101"

optax = "0.1.4"
memory_efficient_attention = "0.1.3"
flax = "^0.6.8"
tensorflow = "^2.8.4"
torch = "2.0.1"
numpy = "^1.26"
urllib3 = "1.26.15"
wandb = "0.14.1"
imageio = "2.19.5"
ffmpegio = "0.8.3"
diffusers = { path = "matfusion_diffusers", develop = true }
lpips_jax = "0.1.0"
ipython = "8.17.2"
opencv-python-headless = "^4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "jax-cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"